<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_group_models" android:menuCategory="container" >
        <menu>
            <group android:checkableBehavior="none">

                <item
                        android:id="@+id/dcmodels_open"
                        android:title="@string/text_destiny_child" />

                <item
                        android:id="@+id/l2dmodels_open"
                        android:title="@string/menu_item_unpacked" />

                <item
                        android:id="@+id/onlinemodels_open"
                        android:title="@string/menu_item_online"
                        android:enabled="@string/isSpecial"
                        android:visible="@string/isSpecial" />
            </group>

        </menu>
    </item>

    <item android:title="@string/menu_group_pck" android:menuCategory="container" >
        <menu>
            <group android:checkableBehavior="none">
                <item
                        android:id="@+id/file_unpack"
                        android:title="@string/menu_item_unpack_pck" />

                <item
                        android:id="@+id/file_pack"
                        android:title="@string/menu_item_pack_pck" />
            </group>
        </menu>
    </item>


    <item android:title="@string/menu_group_locale_patches" android:menuCategory="container" >
        <menu>
            <group android:checkableBehavior="none">

                <item
                        android:id="@+id/translate_locale"
                        android:title="@string/menu_item_translator" />
                <item
                        android:id="@+id/english_patch"
                        android:title="@string/menu_item_english_patch" />
                <item
                        android:id="@+id/russian_patch"
                        android:title="@string/menu_item_russian_patch" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_group_magic" android:menuCategory="container" >
        <menu>
            <group android:checkableBehavior="none">
                <item
                        android:id="@+id/wiki_open"
                        android:title="@string/text_wiki" />

                <item
                        android:id="@+id/dcmodels_swap"
                        android:title="@string/menu_item_swap_models" />
                <item
                        android:id="@+id/dcicons_swap"
                        android:title="@string/menu_item_swap_icons" />

                <item
                        android:id="@+id/dcbanner_widget_open"
                        android:title="@string/menu_item_add_widget" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_group_credits" android:menuCategory="container" >
        <menu>
            <group>
                <item android:title="@string/user_banana" android:enabled="false" />
                <item android:title="@string/user_whocares" android:enabled="false" />
                <item android:title="@string/user_falzar" android:enabled="false" />
                <item android:title="@string/user_envy" android:enabled="false" />
                <item
                        android:id="@+id/discord_open"
                        android:title="@string/text_join_discord" />
            </group>
        </menu>
    </item>

    <item android:title="@string/text_version" android:menuCategory="container" >
        <menu>
            <group>
                <item android:id="@+id/menu_version"
                      android:title=""
                      android:enabled="false" />
            </group>
        </menu>
    </item>
</menu>