<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/wiki_elements" android:menuCategory="container" >
        <menu>

                <item
                        android:id="@+id/search_element_fire"
                        android:icon="@drawable/ic_element_fire"
                        android:title="@string/wiki_fire" />

                <item
                        android:id="@+id/search_element_water"
                        android:icon="@drawable/ic_element_water"
                        android:title="@string/wiki_water" />

                <item
                        android:id="@+id/search_element_wind"
                        android:icon="@drawable/ic_element_wind"
                        android:title="@string/wiki_wind" />

                <item
                        android:id="@+id/search_element_light"
                        android:icon="@drawable/ic_element_light"
                        android:title="@string/wiki_light" />
                <item
                        android:id="@+id/search_element_dark"
                        android:icon="@drawable/ic_element_dark"
                        android:title="@string/wiki_dark" />
        </menu>
    </item>

    <item android:title="@string/wiki_types" android:menuCategory="container" >
        <menu>
            <group android:id="@+id/group2" android:checkableBehavior="single">
                <item
                        android:id="@+id/search_type_attacker"
                        android:icon="@drawable/ic_type_attacker"
                        android:title="@string/wiki_attacker" />

                <item
                        android:id="@+id/search_type_tank"
                        android:icon="@drawable/ic_type_tank"
                        android:title="@string/wiki_tank" />

                <item
                        android:id="@+id/search_type_healer"
                        android:icon="@drawable/ic_type_healer"
                        android:title="@string/wiki_healer" />

                <item
                        android:id="@+id/search_type_debuffer"
                        android:icon="@drawable/ic_type_debuffer"
                        android:title="@string/wiki_debuffer" />
                <item
                        android:id="@+id/search_type_support"
                        android:icon="@drawable/ic_type_support"
                        android:title="@string/wiki_support" />
            </group>
        </menu>
    </item>
</menu>