<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp">

    <TextView
            android:text="@string/config_model_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    <EditText
            android:id="@+id/input_id"
            android:hint="@string/config_hint_model_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textNoSuggestions" />


    <TextView
            android:text="@string/config_model_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    <EditText
            android:id="@+id/input_name"
            android:hint="@string/config_hint_model_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="text" />

    <TextView
            android:text="@string/config_model_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    <EditText
            android:id="@+id/input_folder"
            android:hint="@string/config_hint_model_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textNoSuggestions" />



</LinearLayout>